--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI='mongodb+srv://ankitkumar9k19:IT5ihXXPEsFlUt45@cluster0.ouodbtk.mongodb.net'
+CLERK_WEBHOOK_SECRET='whsec_t9+EhT4rqkktVEqtHuOldAGmJyHE1emA'
