--- a/server/package.json
+++ b/server/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "form-data": "^4.0.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
+    "mongoose": "^8.15.2",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
