--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URI='mongodb+srv://ankitkumar9k19:rKvC7dDb26jtKwaB@cluster0.pphq7so.mongodb.net'
+CLERK_WEBHOOK_SECRET='whsec_YOkmn7jlDTDur1hWFKDVQS8CBCMuCKj7' 
