--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_d2FudGVkLXJhYmJpdC03LmNsZXJrLmFjY291bnRzLmRldiQ
+VITE_BACKEND_URL='http://localhost:4000'
+
+VITE_RAZORPAY_KEY_ID='rzp_test_8F5DRKhsoSBMrb'
