--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@clerk/backend": "^2.1.0",
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
